--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Gym App" />
 
     <!-- App title -->
-    <title>Gym App</title>
+    <title>GymItUp</title>
 
     <!-- Web App Manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
