--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
 
     <!-- PWA / Theme -->
     <meta name="theme-color" content="#0b0b0b" />
-    <meta name="description" content="Gym App" />
+    <meta name="description" content="GymItUp" />
 
     <!-- App title -->
     <title>GymItUp</title>
@@ -19,8 +19,8 @@
     <!-- iOS: Add to Home Screen -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Gym App" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-192.png" />
+    <meta name="apple-mobile-web-app-title" content="GymItUp" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-192-v4.png" />
   </head>
 
   <body>
